--- a/index.html
+++ b/index.html
@@ -208,27 +208,36 @@
           <h2 class="work-section__title">Чим ми займаємося</h2>
           <ul class="work-list">
             <li class="work-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/work/work-desktop-1x.jpg 1x, ./img/img-2/work/work-desktop-2x.jpg 2x">
+                <img
                 class="work-list__img"
                 src="./img/img-2/img-5.jpg"
                 alt="html"
-              />
+                />
+              </picture>
               <h3 class="work-list__script">Десктопні додатки</h3>
             </li>
             <li class="work-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/work/work-2-desktop-1x.jpg 1x, ./img/img-2/work/work-2-desktop-2x.jpg 2x">
+                <img
                 class="work-list__img"
                 src="./img/img-2/./img-6.jpg"
                 alt="css"
               />
+              </picture>
               <h3 class="work-list__script">Мобільні додатки</h3>
             </li>
             <li class="work-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/work/work-3-desktop-1x.jpg 1x, ./img/img-2/work/work-3-desktop-2x.jpg 2x">
+                <img
                 class="work-list__img"
                 src="./img/img-2/img-7.jpg"
                 alt="javaScript"
               />
+              </picture>
               <h3 class="work-list__script">Дизайнерські рішення</h3>
             </li>
           </ul>
@@ -236,14 +245,19 @@
       </section>
       <section class="team-section">
         <div class="container">
-          <h2 class="team-section__title">Наша комманда</h2>
+          <h2 class="team-section__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/team/team-desktop-1x.jpg 1x, ./img/img-2/team/team-desktop-2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/img-2/team/team-tablet-1x.jpg 1x, ./img/img-2/team/team-tablet-2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./img/img-2/team/team-mobile-1x.jpg 1x, ./img/img-2/team/team-mobile-2x.jpg 2x">
+                <img
                 class="team-list__img"
-                src="img/img-2/img-1.jpg"
+                src="img/img-2/team/team-mobile-1x.jpg"
                 alt="Product Designer"
-              />
+                />
+              </picture>
               <p class="team-list__person">Ігор Дем'яненко</p>
               <p class="team-list__text">Product Designer</p>
               <ul class="team-social">
@@ -286,11 +300,16 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/team/team-2-desktop-1x.jpg 1x, ./img/img-2/team/team-2-desktop-2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/img-2/team/team-2-tablet-1x.jpg 1x, ./img/img-2/team/team-2-tablet-2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./img/img-2/team/team-2-mobile-1x.jpg 1x, ./img/img-2/team/team-2-mobile-2x.jpg 2x">
+                <img
                 class="team-list__img"
-                src="img/img-2/img-2.jpg"
-                alt="Frontend Developer"
-              />
+                src="img/img-2/team/team-2-mobile-1x.jpg"
+                alt="Product Designer"
+                />
+              </picture>
               <p class="team-list__person">Ольга Рєпіна</p>
               <p class="team-list__text">Frontend Developer</p>
               <ul class="team-social">
@@ -333,11 +352,16 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/team/team-3-desktop-1x.jpg 1x, ./img/img-2/team/team-3-desktop-2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/img-2/team/team-3-tablet-1x.jpg 1x, ./img/img-2/team/team-3-tablet-2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./img/img-2/team/team-3-mobile-1x.jpg 1x, ./img/img-2/team/team-3-mobile-2x.jpg 2x">
+                <img
                 class="team-list__img"
-                src="img/img-2/img-3.jpg"
-                alt="Marketing"
-              />
+                src="img/img-2/team/team-3-mobile-1x.jpg"
+                alt="Product Designer"
+                />
+              </picture>
               <p class="team-list__person">Микола Тарасов</p>
               <p class="team-list__text">Marketing</p>
               <ul class="team-social">
@@ -380,11 +404,16 @@
               </ul>
             </li>
             <li class="team-list__item">
-              <img
+              <picture>
+                <source media="(min-width: 1200px)" srcset="./img/img-2/team/team-4-desktop-1x.jpg 1x, ./img/img-2/team/team-4-desktop-2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="./img/img-2/team/team-4-tablet-1x.jpg 1x, ./img/img-2/team/team-4-tablet-2x.jpg 2x">
+                <source media="(max-width: 767px)" srcset="./img/img-2/team/team-4-mobile-1x.jpg 1x, ./img/img-2/team/team-4-mobile-2x.jpg 2x">
+                <img
                 class="team-list__img"
-                src="img/img-2/img-4.jpg"
-                alt="ui designer"
-              />
+                src="img/img-2/team/team-4-mobile-1x.jpg"
+                alt="Product Designer"
+                />
+              </picture>
               <p class="team-list__person">Михайло Єрмаков</p>
               <p class="team-list__text">UI Designer</p>
               <ul class="team-social">
