--- a/portfolio.html
+++ b/portfolio.html
@@ -91,11 +91,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-desktop-1x.jpg 1x, ./img/img-3/poster/poster-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-tablet-1x.jpg 1x, ./img/img-3/poster/poster-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-mobile-1x.jpg 1x, ./img/img-3/poster/poster-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -109,11 +114,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html" class="poster-list__link">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-1.jpg"
-                    alt="Дизайн"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-1-desktop-1x.jpg 1x, ./img/img-3/poster/poster-1-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-1-tablet-1x.jpg 1x, ./img/img-3/poster/poster-1-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-1-mobile-1x.jpg 1x, ./img/img-3/poster/poster-1-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-1-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -129,11 +139,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-2.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-2-desktop-1x.jpg 1x, ./img/img-3/poster/poster-2-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-2-tablet-1x.jpg 1x, ./img/img-3/poster/poster-2-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-2-mobile-1x.jpg 1x, ./img/img-3/poster/poster-2-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-2-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -147,11 +162,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-3.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-3-desktop-1x.jpg 1x, ./img/img-3/poster/poster-3-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-3-tablet-1x.jpg 1x, ./img/img-3/poster/poster-3-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-3-mobile-1x.jpg 1x, ./img/img-3/poster/poster-3-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-3-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -165,11 +185,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-4.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-4-desktop-1x.jpg 1x, ./img/img-3/poster/poster-4-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-4-tablet-1x.jpg 1x, ./img/img-3/poster/poster-4-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-4-mobile-1x.jpg 1x, ./img/img-3/poster/poster-4-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-4-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -183,11 +208,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-5.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-5-desktop-1x.jpg 1x, ./img/img-3/poster/poster-5-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-5-tablet-1x.jpg 1x, ./img/img-3/poster/poster-5-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-5-mobile-1x.jpg 1x, ./img/img-3/poster/poster-5-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-5-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -201,11 +231,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-6.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-6-desktop-1x.jpg 1x, ./img/img-3/poster/poster-6-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-6-tablet-1x.jpg 1x, ./img/img-3/poster/poster-6-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-6-mobile-1x.jpg 1x, ./img/img-3/poster/poster-6-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-6-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -219,11 +254,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-7.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-7-desktop-1x.jpg 1x, ./img/img-3/poster/poster-7-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-7-tablet-1x.jpg 1x, ./img/img-3/poster/poster-7-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-7-mobile-1x.jpg 1x, ./img/img-3/poster/poster-7-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-7-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
@@ -237,11 +277,16 @@
             <li class="poster-list__item">
               <a href="./portfolio.html">
                 <div class="poster-list__overlay">
-                  <img
-                    class="poster-list__img"
-                    src="./img/img-3/img-8.jpg"
-                    alt="Вебсайт"
-                  />
+                  <picture>
+                    <source media="(min-width: 1200px)" srcset="./img/img-3/poster/poster-8-desktop-1x.jpg 1x, ./img/img-3/poster/poster-8-desktop-2x.jpg 2x">
+                    <source media="(min-width: 768px)" srcset="./img/img-3/poster/poster-8-tablet-1x.jpg 1x, ./img/img-3/poster/poster-8-tablet-2x.jpg 2x">
+                    <source media="(max-width: 767px)" srcset="./img/img-3/poster/poster-8-mobile-1x.jpg 1x, ./img/img-3/poster/poster-8-mobile-2x.jpg 2x">
+                    <img
+                      class="poster-list__img"
+                      src="./img/img-3/poster/poster-8-mobile-1x.jpg"
+                      alt="Вебсайт"
+                    />
+                  </picture>
                   <p class="poster-list__overlay-text">
                     Технокрик це сучасний майданчик поширення коронавірусу.
                     Компанії використовують цю платформу для цифрового
