--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <p class="team-list__text">Product Designer</p>
               <ul class="team-social">
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-instagram"
@@ -271,7 +271,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-twitter"
@@ -280,7 +280,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-facebook"
@@ -289,7 +289,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-linkedin"
@@ -314,7 +314,7 @@
               <p class="team-list__text">Frontend Developer</p>
               <ul class="team-social">
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-instagram"
@@ -323,7 +323,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-twitter"
@@ -332,7 +332,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-facebook"
@@ -341,7 +341,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-linkedin"
@@ -366,7 +366,7 @@
               <p class="team-list__text">Marketing</p>
               <ul class="team-social">
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-instagram"
@@ -375,7 +375,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-twitter"
@@ -384,7 +384,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-facebook"
@@ -393,7 +393,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-linkedin"
@@ -418,7 +418,7 @@
               <p class="team-list__text">UI Designer</p>
               <ul class="team-social">
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-instagram"
@@ -427,7 +427,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-twitter"
@@ -436,7 +436,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-facebook"
@@ -445,7 +445,7 @@
                   </a>
                 </li>
                 <li class="team-social__item">
-                  <a href="/" class="team-social__link">
+                  <a href="#" class="team-social__link">
                     <svg class="team-social__icon">
                       <use
                         href="./img/img-2/symbol-defs.svg#icon-linkedin"
