--- a/index.html
+++ b/index.html
@@ -521,14 +521,14 @@
             </address>
             <ul class="footer-list">
               <li class="footer-list__item">
-                <a class="footer-list__contact" href="info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+                <a class="footer-list__contact" href="info@devstudio.com">
+                  info@devstudio.com
+                </a>
               </li>
               <li class="footer-list__item">
-                <a class="footer-list__contact" href="tel:380961111111"
-                  >+38 096 111 11 11</a
-                >
+                <a class="footer-list__contact" href="tel:380961111111">
+                  +38 096 111 11 11
+                  </a>
               </li>
             </ul>
           </div>
