--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             <ul class="footer-list">
               <li class="footer-list__item">
                 <a class="footer-list__contact" href="info@devstudio.com">
-                  info@devstudio.com
+                  ginfo@devstudio.com
                 </a>
               </li>
               <li class="footer-list__item">
